# figaro-VLDBJ

./: .gitignore  README.md  USAGE.md
competitors/python/: qr.py
figaro/: CMakeLists.txt  README.MD  README.md  clean.sh  setup.sh  workspace.code-workspace
figaro/include/database/: Database.h  Hash.h  Relation.h
figaro/include/database/query/: ASTComputeDownCountsVisitor.h  ASTComputeUpAndCircleCountsVisitor.h  ASTFigaroExpressionVisitor.h  ASTFigaroFirstPassVisitor.h  ASTFigaroSecondPassVisitor.h  ASTJoinAttributesComputeVisitor.h  ASTJoinVisitor.h  ASTNode.h  ASTNodeAbsRelation.h  ASTNodeJoin.h  ASTNodePostProcQR.h  ASTNodeQRGivens.h  ASTNodeRelation.h  ASTPostProcQRVisitor.h  ASTQRVisitor.h  ASTScaledCartesianProductVisitor.h  ASTVisitor.h  ASTVisitorJoinResult.h  ASTVisitorQRGivens.h  Query.h
figaro/include/database/query/node/: ASTNode.h  ASTNodeAbsRelation.h  ASTNodeAssign.h  ASTNodeEvalJoin.h  ASTNodeInverse.h  ASTNodeJoin.h  ASTNodeLUAlg.h  ASTNodeLUFigaro.h  ASTNodeLULapack.h  ASTNodeLUThin.h  ASTNodeLeastSquares.h  ASTNodeLinReg.h  ASTNodePCAAlgDec.h  ASTNodePCAFigaro.h  ASTNodePostProcQR.h  ASTNodeQRAlg.h  ASTNodeQRFigaro.h  ASTNodeQRGivens.h  ASTNodeQRPostProc.h  ASTNodeRelation.h  ASTNodeRightMultiply.h  ASTNodeSVDAlgDec.h  ASTNodeSVDFigaro.h  ASTNodeSVDLapack.h  ASTNodeSVDSVTInv.h
figaro/include/database/query/visitor/: ASTBuildIndicesVisitor.h  ASTComputeDownCountsVisitor.h  ASTComputeUpAndCircleCountsVisitor.h  ASTFigaroFirstPassVisitor.h  ASTFigaroSecondPassVisitor.h  ASTJoinAttributesComputeVisitor.h  ASTJoinVisitor.h  ASTRightMultiplyVisitor.h  ASTVisitor.h  ASTVisitorAbsResult.h  ASTVisitorBuildIndices.h  ASTVisitorComputeDownCounts.h  ASTVisitorComputeJoinAttributes.h  ASTVisitorComputeUpAndCircleCounts.h  ASTVisitorFirstPassResult.h  ASTVisitorJoin.h  ASTVisitorJoinResult.h  ASTVisitorQRFigaroAbs.h  ASTVisitorQRFigaroFirstPass.h  ASTVisitorQRFigaroSecondPass.h  ASTVisitorQRGivens.h  ASTVisitorQRGivensAbs.h  ASTVisitorQRResult.h  ASTVisitorQueryEval.h  ASTVisitorRightMultiply.h  ASTVisitorSecondPassResult.h
figaro/include/database/query/visitor/figaro/lu/: ASTVisitorLUFigaroAbs.h  ASTVisitorLUFigaroFirstPass.h  ASTVisitorLUFigaroSecondPass.h
figaro/include/database/query/visitor/figaro/qr/: ASTVisitorComputeDownCounts.h  ASTVisitorComputeUpAndCircleCounts.h  ASTVisitorQRFigaroAbs.h  ASTVisitorQRFigaroFirstPass.h  ASTVisitorQRFigaroSecondPass.h
figaro/include/database/query/visitor/result/: ASTVisitorResultAbs.h  ASTVisitorResultFirstPass.h  ASTVisitorResultJoin.h  ASTVisitorResultQR.h  ASTVisitorResultSVD.h  ASTVisitorResultSecondPass.h
figaro/include/database/storage/: ArrayStorage.h  Matrix.h  MatrixSparse.h
figaro/include/utils/: ErrorCode.h  Logger.h  Performance.h  Types.h  Utils.h
figaro/src/: main.cpp
figaro/src/database/: Database.cpp  Relation.cpp
figaro/src/database/query/: ASTComputeDownCountsVisitor.cpp  ASTComputeUpAndCircleCountsVisitor.cpp  ASTFigaroExpressionVisitor.cpp  ASTFigaroFirstPassVisitor.cpp  ASTFigaroSecondPassVisitor.cpp  ASTJoinAttributesComputeVisitor.cpp  ASTJoinVisitor.cpp  ASTNodeAssign.cpp  ASTNodeJoin.cpp  ASTNodePostProcQR.cpp  ASTNodeQRGivens.cpp  ASTNodeRelation.cpp  ASTPostProcQRVisitor.cpp  ASTQRVisitor.cpp  ASTScaledCartesianProductVisitor.cpp  ASTVisitor.cpp  ASTVisitorQRGivens.cpp  Query.cpp  QueryLinearAlgebra.cpp  QueryRelational.cpp
figaro/src/database/query/node/: ASTNodeAssign.cpp  ASTNodeEvalJoin.cpp  ASTNodeInverse.cpp  ASTNodeJoin.cpp  ASTNodeLUAlg.cpp  ASTNodeLUFigaro.cpp  ASTNodeLULapack.cpp  ASTNodeLUThin.cpp  ASTNodeLeastSquares.cpp  ASTNodeLinReg.cpp  ASTNodePCAAlgDec.cpp  ASTNodePCAFigaro.cpp  ASTNodePostProcQR.cpp  ASTNodeQRAlg.cpp  ASTNodeQRFigaro.cpp  ASTNodeQRGivens.cpp  ASTNodeQRPostProc.cpp  ASTNodeRelation.cpp  ASTNodeRightMultiply.cpp  ASTNodeSVDAlgDec.cpp  ASTNodeSVDFigaro.cpp  ASTNodeSVDLapack.cpp  ASTNodeSVDSVTInv.cpp
figaro/src/database/query/visitor/: ASTBuildIndicesVisitor.cpp  ASTComputeDownCountsVisitor.cpp  ASTComputeUpAndCircleCountsVisitor.cpp  ASTFigaroFirstPassVisitor.cpp  ASTFigaroSecondPassVisitor.cpp  ASTJoinAttributesComputeVisitor.cpp  ASTJoinVisitor.cpp  ASTRightMultiplyVisitor.cpp  ASTVisitor.cpp  ASTVisitorComputeJoinAttributes.cpp  ASTVisitorJoin.cpp  ASTVisitorQRBuildIndices.cpp  ASTVisitorQRComputeDownCounts.cpp  ASTVisitorQRComputeUpAndCircleCounts.cpp  ASTVisitorQRFigaroFirstPass.cpp  ASTVisitorQRFigaroSecondPass.cpp  ASTVisitorQRGivens.cpp  ASTVisitorQueryEval.cpp  ASTVisitorRightMultiply.cpp
figaro/src/database/query/visitor/figaro/lu/: ASTVisitorLUFigaroFirstPass.cpp  ASTVisitorLUFigaroSecondPass.cpp
figaro/src/database/query/visitor/figaro/qr/: ASTVisitorQRComputeDownCounts.cpp  ASTVisitorQRComputeUpAndCircleCounts.cpp  ASTVisitorQRFigaroFirstPass.cpp  ASTVisitorQRFigaroSecondPass.cpp
figaro/src/utils/: Utils.cpp
figaro/tests/: DatabaseTest.cpp  MatrixTest.cpp  UtilTest.cpp  UtilTest.h  main.cpp
figaro/tests/data/test3/: database_specs.conf
figaro/tests/data/test3/data/: R.csv  S.csv  T.csv  U.csv
figaro/tests/test1/: database_specs.conf
figaro/tests/test2/: database_specs.conf  query_specs.conf
figaro/tests/test3/: database_specs.conf
figaro/tests/test3/data/: S.csv  T.csv  expectedR.csv
figaro/tests/test4/: database_specs.conf
figaro/tests/test4/data/: R.csv  S.csv  T.csv  U.csv  expectedR.csv
figaro/tests/test5/: database_specs.conf  query_specs.conf
figaro/tests/test5/lu/: query_specs.conf
figaro/tests/test5/qr/: query_specs.conf
reproducibility/: library_setup.sh  repro.sh  run_experiments.sh
reproducibilty/: library_setup.sh  repro.sh  run_experiments.sh  user_install.sh
scripts/: README.MD  data_handler.py  mkl-requirements.txt  requirements.txt  system_test.py
scripts/data_generators/: README.MD  accuracy_cart_prod_generator.py  cartesian_product_generator.py  database_generator.py  relation_generator.py  relation_schema_generator.py
scripts/data_management/: data_formating.py  database.py  database_full_reducer.py  database_pandas.py  database_psql.py  dataset_size.py  psql_db.py  query.py  (+3 more)
(+1495 files in other folders)
